--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -8,25 +8,25 @@ Resources:
       FunctionName: LF1
       Handler: lambda_function.lambda_handler
       Runtime: python3.7
-      CodeUri: ./search-photos-copy
+      CodeUri: ./indexPhotos
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
-      Role: "arn:aws:iam::625543281468:role/admin-lambda-role"
+      Role: "arn:aws:iam::308316403373:role/service-role/LF1-role-ambopnx5"
       Environment:
         Variables:
           REGION: us-east-1
   CDDemoLambda2:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: index-photos-2
+      FunctionName: testLex
       Handler: lambda_function.lambda_handler
-      Runtime: python3.6
-      CodeUri: ./index-photos-copy
+      Runtime: python3.8
+      CodeUri: ./searchPhotos
       Description: "Lambda function for CD Demo"
       MemorySize: 128
       Timeout: 30
-      Role: "arn:aws:iam::625543281468:role/admin-lambda-role"
+      Role: "arn:aws:iam::308316403373:role/service-role/testLex-role-uptapox7"
       Environment:
         Variables:
           REGION: us-east-1
