--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,14 @@
 version: 0.1
-phases:
-  install:
-    commands:
-      - aws cloudformation package --template-file samTemplate.yaml --s3-bucket lambdapipeline-demo --output-template-file outputsamtemplate.yml
-artifacts:
-  type: zip
-  files:
-    - samTemplate.yaml
-    - outputsamtemplate.yml
+  phases:
+    pre_build:
+      commands:
+        - echo Installing source NPM dependencies...
+        - npm install
+    build:
+      commands:
+        - echo Build started on `date`
+        - npm run build
+  artifacts:
+    files:
+      - '**/*'
+    base-directory: build
