--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -5,7 +5,7 @@ Resources:
   CDDemoLambda1:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: indexPhotos
+      FunctionName: indexPhotos1
       Handler: lambda_function.lambda_handler
       Runtime: python3.7
       CodeUri: ./indexPhotos
@@ -19,7 +19,7 @@ Resources:
   CDDemoLambda2:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: searchPhotos
+      FunctionName: searchPhotos1
       Handler: lambda_function.lambda_handler
       Runtime: python3.8
       CodeUri: ./searchPhotos
